--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build && gh-pages -d public -b deploy"
   },
   "dependencies": {
     "gatsby": "^4.4.0",
