--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Build with Next.js 🏗️
         run: npx next build
 
+      - name: Export static files 📤
+        run: npx next export
+
+      - name: List directory contents
+        run: ls -alh ./out
+
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
