--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,16 +25,13 @@ jobs:
       - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
         uses: ./.github/workflows/setup-node
 
-      - name: Setup Pages ⚙️
-        uses: actions/configure-pages@v4
-        with:
-          static_site_generator: next
+      # - name: Setup Pages ⚙️
+      #   uses: actions/configure-pages@v4
+      #   with:
+      #     static_site_generator: next
 
       - name: Build with Next.js 🏗️
         run: npx next build
-
-      - name: Export static files 📤
-        run: npx next export
 
       - name: List directory contents
         run: ls -alh ./out
